--- a/README
+++ b/README
@@ -5,11 +5,14 @@ Page for search and testing commands on bash.
   #FUNCTIONS
    You can search two or more commands using / to split the commands that you write. Example: ls/wget or ls/wget/clear and more
    You can choose your favorite color color background
-   Alert upper case when you write
-   Using Ajax for don't fresh the page
+   Detect and alert upper case while you are writing
+   Using Ajax for don't fresh the page, and see the results immediately
    
   #FUTURE
-   This page as time goes by, it will evolve and improve.
+   This page as time goes by, it will evolve and improve
+   I have enough desire and illusions with this project!
+   
+   ![alt text](https://www.lifeder.com/wp-content/uploads/2017/01/frases-de-Pain.jpg)
    
    
    
