--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Page for search and testing commands on bash.
    This page as time goes by, it will evolve and improve
    I have enough desire and illusions with this project!
    
-   ![alt text](https://www.lifeder.com/wp-content/uploads/2017/01/frases-de-Pain.jpg)
+   <img width="786" alt="Captura" src="https://user-images.githubusercontent.com/48721794/56842913-db98fe80-689a-11e9-9dcf-6c642690df94.PNG">
    
    
    
