Update and rename README to README.me

--- a/README.me
+++ b/README.me
@@ -4,7 +4,7 @@ Page for search and testing commands on bash.
 
   #FUNCTIONS
    You can search two or more commands using / to split the commands that you write. Example: ls/wget or ls/wget/clear and more
-   You can choose your favorite color color background
+   You can choose your favorite color background
    Detect and alert upper case while you are writing
    Using Ajax for don't fresh the page, and see the results immediately
    
