--- a/README.me
+++ b/README.me
@@ -12,7 +12,7 @@ Page for search and testing commands on bash.
    This page as time goes by, it will evolve and improve
    I have enough desire and illusions with this project!
    
-   ![alt text](lscommands/OTHERS/README/index.PNG)
+   ![alt text](lscommands/OTHERS/README/index.PNG?raw=true "Title")
    
    
    
